fix height on mobile for content

--- a/assets/less/default/content.less
+++ b/assets/less/default/content.less
@@ -85,7 +85,7 @@
 	    align-items: center;
 		width: 100%;
 		height: 100vh;
-		min-height: 600px;
+		min-height: 640px;
 
 		@media @mobile {
 			max-height: 400px;
